--- a/css/screen.css
+++ b/css/screen.css
@@ -379,6 +379,10 @@ a:focus {
     justify-content: space-between;
 }
 
+.o-layout--justify-gap {
+    gap: 40px;
+}
+
 /* Vertical alignment modifiers */
 
 .o-layout--align-start {
@@ -472,22 +476,88 @@ a:focus {
     Main header of the website
 */
 
+.c-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .c-header__nav {
     display: none;
 }
 
 @media (min-width: 992px) {
-    .c-header {
-        display: flex;
-        gap: 24px;
-        justify-content: space-between;
-    }
-
     .c-header__nav {
         display: block;
     }
+
+    .c-header__nav--main {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        margin-top: 12px;
+    }
+
+    .c-header__mobile-nav-trigger {
+        display: none;
+    }
 }
 
+/*
+    Component: footer
+    ---
+    Main footer of the website
+*/
+
+.c-footer {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.c-footer__logo {
+    width: 100%;
+}
+
+.c-footer__nav {
+    width: 50%;
+}
+
+@media (min-width: 768px) {
+    .c-footer {
+        justify-content: center;
+        align-items: center;
+    }
+
+    .c-footer__logo {
+        display: flex;
+        justify-content: center;
+        padding: 0 12px;
+    }
+
+    .c-footer__nav {
+        width: auto;
+        padding: 0 16px;
+    }
+}
+
+@media (min-width: 992px) {
+    .c-footer {
+        justify-content: space-between;
+    }
+
+    .c-footer__nav {
+        padding: 0;
+    }
+
+    .c-footer__logo+.c-footer__nav {
+        order: -1;
+    }
+
+    .c-footer__logo {
+        width: auto;
+    }
+}
 
 /*
     Component: Logo
@@ -616,6 +686,8 @@ a:focus {
 .c-link-cta--inverse:hover::after {
     background-color: #fff;
 }
+
+
 
 /*------------------------------------*\
   #UTILITIES
